[package]
name = "hypocloid"
version = "0.1.0"
authors = ["Gaute Hope <eg@gaute.vetsj.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notmuch = "0.5.0"
actix-web = "1.0.5"
serde_json = "1.0.40"
serde = "1.0.98"
serde_derive = "1.0.98"
env_logger = "0.6.2"
actix-cors = "0.1.0"
futures = "0.1.28"
bytes = "0.4.12"
supercow = "0.1.0"
itertools = "0.8.0"
