[package]
name = "astroid"
version = "0.1.0"
authors = ["Gaute Hope <eg@gaute.vetsj.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
seed = "0.7"
serde = "*"
wasm-bindgen = "*"

proto = { path = "../proto" }

[dependencies.web-sys]
version = "0.3.35"
features = [
    "Blob",
    "Event",
    "EventTarget",
    "File",
    "FileList",
    "FormData",
    "HtmlInputElement",
    "CloseEvent",
    "BeforeUnloadEvent",
]
