[package]
name = "astroid"
version = "0.1.0"
authors = ["Gaute Hope <eg@gaute.vetsj.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-view = { version = "*" }
hypocycloid = { path = "../hypocycloid" }

[dependencies.tokio]
features = ["full"]
version = "*"
