[package]
authors = ["Gaute Hope <eg@gaute.vetsj.com>"]
edition = "2018"
name = "hypocloid"
version = "0.1.0"
[dependencies]
anyhow = "*"
bytes = "*"
dirs = "*"
env_logger = "*"
futures = "*"
hyper = "*"
itertools = "*"
log = "*"
notmuch = "*"
rust-ini = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
warp = "*"
percent-encoding = "2.1.0"

[dependencies.tokio]
features = ["full"]
version = "*"
